# LinkedListToDoApp

./: CMakeCache.txt  CMakeLists.txt  LinkedList.cpp  LinkedList.h  Makefile  Node.cpp  Node.h  README.md  Task.cpp  Task.h  ToDoApp  cmake_install.cmake  main.cpp
